--- a/index.html
+++ b/index.html
@@ -12,6 +12,71 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <section class="container">
+        <div class="trending">
+            <div class="card-image "></div>
+
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+        </div>
+        <div class="card">
+            <div class="card-image "><img id=image_1 src="https://m.media-amazon.com/images/I/71niXI3lxlL._SY679_.jpg"> </div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="https://www.imdb.com/">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image "></div>
+            <img id=img_2 src="https://m.media-amazon.com/images/M/MV5BMTg1MTY2MjYzNV5BMl5BanBnXkFtZTgwMTc4NTMwNDI@._V1_.jpg">
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image "></div>
+            <div class="m1"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image "></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+        <div class="card">
+            <div class="card-image"></div>
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto enim, impedit asperiores voluptate dolores cum.</p>
+            <a href="">View More</a>
+        </div>
+
+    </section>
     <h5> Team Members </h5>
 <div class="row">
     <div class="column">
