--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=League+Spartan:wght@300&family=Pacifico&family=Spline+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="GDSC Activity 1.css">
 </head>
 <body>
      <section class="container">
