--- a/movies.html
+++ b/movies.html
@@ -9,13 +9,10 @@
 </head>
 <body>
     <div class="Menu-Bar">
-        <ul>
-            <li class ="active"><a href="#"><i class="fa fa-home" aria-hidden="true" ></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-video-camera" aria-hidden="true"></i> Movies</a></li>
-            <li><a href="#"><i class="fa fa-video-camera" aria-hidden="true"></i> Series</a></li>
-            <li><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i>Character</a></li>
-        </ul>
-    </div>
+        <a href="index.html"><i class="fa fa-home" aria-hidden="true" ></i> Home</a>
+        <a href="movies.html"><i class="fa fa-video-camera" aria-hidden="true"></i> Movies</a>
+        <a href="home.html"><i class="fa fa-address-book" aria-hidden="true"></i>Team Members</a>
+</div>
     
     <div class="container">
     <div class="container-title">
@@ -87,4 +84,5 @@
 
     </div>
 </body>
+
 </html>
