--- a/home.html
+++ b/home.html
@@ -20,51 +20,51 @@
         <div class="row">
             <div class="column">
               <div class="card">
-                <img src="img1.jpg" alt="Jane" style="width:100%">
+                <img src="asbaa.jpeg" alt="Asbaa" style="width:100%">
                 <div class="container">
-                  <h2>Jane Doe</h2>
-                  <p class="title">CEO &amp; Founder</p>
+                  <h2>Asbaa</h2>
+                  <p class="title">Team Leader</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p>example@example.com</p>
-                  <p><button class="button">Contact</button></p>
+                  <p>Email me through the below button</p>
+                  <p><a class="button" href="mailto:asbaathakur@gmail.com">Contact</a></p>
                 </div>
               </div>
             </div>
           
             <div class="column">
               <div class="card">
-                <img src="img2.jpg" alt="Mike" style="width:100%">
+                <img src="saad.jfif" alt="Saad" style="width:100%">
                 <div class="container">
-                  <h2>Mike Ross</h2>
-                  <p class="title">Art Director</p>
+                  <h2>Saad</h2>
+                  <p class="title">Team Member</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p>example@example.com</p>
-                  <p><button class="button">Contact</button></p>
+                  <p>Email me through the below button</p>
+                  <p><a class="button" href="mailto:saadshaikh139@gmail.com">Contact</a></p>
                 </div>
               </div>
             </div>
           
             <div class="column">
               <div class="card">
-                <img src="img3.jpg" alt="John" style="width:100%">
+                <img src="vishwa.jfif" alt="Vishwa" style="width:100%">
                 <div class="container">
-                  <h2>John Doe</h2>
-                  <p class="title">Designer</p>
+                  <h2>Vishwa</h2>
+                  <p class="title">Team Member</p>
                   <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p>example@example.com</p>
-                  <p><button class="button">Contact</button></p>
+                  <p>Email me through the below button</p>
+                                    <p><button class="button">Contact</button></p>
                 </div>
               </div>
             </div>
             <div class="column">
                 <div class="card">
-                  <img src="img3.jpg" alt="John" style="width:100%">
+                  <img src="AR.jpg" alt="Abraham" style="width:100%">
                   <div class="container">
-                    <h2>John Doe</h2>
-                    <p class="title">Designer</p>
+                    <h2>Abraham</h2>
+                    <p class="title">Team Member</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Email me through the below button</p>
+                                        <p><a class="button" href="mailto:abrahamrichard422@gmail.com">Contact</a></p>
                   </div>
                 </div>
               </div>
